--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,14 @@
     <body>
         <main class="container">
             <div class="messages"></div>
+        <article class="plant">Sunflower</article>
+        <article class="plant">Soybean</article>
+        <article class="plant">Wheat</article>
+        <article class="plant">Potato</article>
+        <article class="plant">Asparagus</article>
+        <article class="plant">Corn</article>
         </main>
-        <h1>Hi is this working?</h1>
+        
         <script type="module" src="./scripts/main.js"></script>
     </body>
 </html>
