--- a/src/index.html
+++ b/src/index.html
@@ -7,15 +7,9 @@
     </head>
 
     <body>
-        <main class="container">
+        <div class="container">
             <div class="messages"></div>
-        <article class="plant">Sunflower</article>
-        <article class="plant">Soybean</article>
-        <article class="plant">Wheat</article>
-        <article class="plant">Potato</article>
-        <article class="plant">Asparagus</article>
-        <article class="plant">Corn</article>
-        </main>
+        </div>
         
         <script type="module" src="./scripts/main.js"></script>
     </body>
